2008-05-13  Jonathan Pobst  <monkey@jpobst.com>

	* ThemeWin32Classic.cs, ThemeVisualStyles.cs: When calculating
	progress bar stuffs, use doubles instead of ints to prevent
	overflow.  [Fixes bug #389798]

2008-05-13  Atsushi Enomoto  <atsushi@ximian.com>

	* XplatUIX11.cs, X11Keyboard.cs :
	  Significant refactoring on XIM support. Now IM engine UI
	  should show up, at mostly-correct preedit position.
	  - Eliminated use of FocusWindow, as it is never mapped
	    and hence blocks correct preedit position. XIC is now
	    created per window, and it must be destroyed too when
	    the window is destroyed.
	  - WM_QUIT messages should not be filtered even when hwnd
	    is zombie. Filtering it could cause endless loop.
	  - Preedit position must move only when the window is alive.
	  - Make it IDisposable and make sure to release XIM/XICs.

2008-05-13  Atsushi Enomoto  <atsushi@ximian.com>

	* Timer.cs, Control.cs, Form.cs, ApplicationContext.cs,
	  XplatUIX11.cs, XplatUIWin32.cs :
	  fix for bug #325033 and #387693;
	  - WM_QUIT should not be sent when no running application
	    exists.
	  - SetTimer/KillTimer (especially on win32) should be
	    invoked for the window that the timer is/will_be attached.
	  - There could be unattached timers to a window when it's
	    started. For those timers, hold pending timers and when
	    a window is mapped, attach them to it.
	  - WaitForHwndMessage() could run into loop when
	    WM_SHOWWINDOW is handled before this method is called.
	    So, strictly check wm_showwindow state.
	  - Tick handler should not be invoked while one Tick handler
	    call is still running (introduced Busy state).

2008-05-13  Andreia Gaita <avidigal@novell.com> 

	* WebBrowserBase.cs: Override Internal alternative methods for
	  SetBoundsCore and OnResize instead of the protected ones.
	* Control.cs: Move SetBoundsCore and OnResize implementations to
	  SetBoundsCoreInternal and OnResizeInternal, so they can be